# ac-mcp

./: .gitignore  .mcp.json.template  LICENSE  README.md  aplcart2json.js  aplcart2json.py  aplcart_mcp_semantic.py  generate_embeddings.py  pyproject.toml  search_embeddings.py  start_mcp.sh
